# Mines_Cleaner

./: .gitignore  CMakeLists.txt  README.md  resource.qrc
data/: loginInfo  record.txt
src/: InputDialog.cpp  InputDialog.h  MyGraphicsScene.cpp  MyGraphicsScene.h  NumDialog.cpp  NumDialog.h  database_op.cpp  database_op.h  fielddata.cpp  fielddata.h  gamewindow.cpp  gamewindow.h  levelselection.cpp  levelselection.h  main.cpp  menuscene.cpp  menuscene.h  menuscene.ui  regorlogin.cpp  regorlogin.h  unititem.cpp  unititem.h
